Add audio and background

--- a/style.css
+++ b/style.css
@@ -3,32 +3,37 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
+  color: white;
 }
 
-footer {
-  text-align: center;
-  padding: 10px;
+body {
+  max-width: 500px;
+  height: 100vh;
+  margin: 0 auto;
+  background-image: linear-gradient(
+    120deg,
+    #2b28d1,
+    #9097ff,
+    #5779ff,
+    #00ddff,
+    #997aff,
+    #ca61c1,
+    #bb0048
+  );
+  background-size: 500%;
+  animation: animacion 40s infinite;
 }
 
-footer a {
-  color: black;
-  text-decoration: none;
+.container {
+  background: rgba(0, 0, 0, 0.4);
+  margin-top: 80px;
 }
 
 button {
   margin: 5px;
   cursor: pointer;
   border: none;
-}
-
-.container {
-  max-width: 420px;
-  height: 100vh;
-  max-height: 745px;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  background: none;
 }
 
 h1 {
@@ -57,4 +62,25 @@ h1 {
 
 #groupButton > button > img {
   width: 100%;
+}
+
+footer {
+  text-align: center;
+  padding: 10px;
+}
+
+footer a {
+  text-decoration: none;
+}
+
+@keyframes animacion {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
