--- a/style.css
+++ b/style.css
@@ -57,12 +57,15 @@ h1 {
 
 #startText {
   font-size: 36px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 #groupButton {
   display: flex;
   width: 100%;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 #groupButton > button > img {
@@ -70,7 +73,6 @@ h1 {
 }
 
 footer {
-  padding-bottom: 20px;
   text-align: center;
 }
 
