--- a/style.css
+++ b/style.css
@@ -10,12 +10,12 @@ body {
   height: 100vh;
   background-image: linear-gradient(
     120deg,
-    #c0392b,
-    #9b59b6,
-    #3498db,
-    #1abc9c,
-    #f1c40f,
-    #d35400
+    #942d22,
+    #7c4891,
+    #236692,
+    #13866f,
+    #9c7f0a,
+    #963c01
   );
   background-size: 400%;
   animation: animacion 30s infinite;
