--- a/style.css
+++ b/style.css
@@ -24,27 +24,27 @@ body {
 
 header {
   background: rgba(0, 0, 0, 0.2);
-  width: 500px;
-  height: 55px;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  width: 600px;
+  height: 65px;
+  margin-top: 40px;
+  margin-bottom: 20px;
   margin-left: auto;
   margin-right: auto;
-  border-radius: 25px;
+  border-radius: 30px;
 }
 
 h1 {
-  padding: 6px;
-  font-size: 35px;
+  padding: 8px;
+  font-size: 40px;
   text-align: center;
 }
 
 .container {
   margin: 0 auto;
-  max-width: 500px;
-  max-height: 560px;
+  max-width: 600px;
+  max-height: 660px;
   background: rgba(0, 0, 0, 0.2);
-  border-radius: 25px;
+  border-radius: 30px;
 }
 
 button {
@@ -66,7 +66,7 @@ button {
 }
 
 #startText {
-  font-size: 30px;
+  font-size: 40px;
 }
 
 #groupButton {
@@ -80,9 +80,9 @@ button {
 
 footer {
   background: rgba(0, 0, 0, 0.2);
-  width: 500px;
-  height: 55px;
-  margin-top: 50px;
+  width: 600px;
+  height: 65px;
+  margin-top: 20px;
   margin-left: auto;
   margin-right: auto;
   border-radius: 25px;
@@ -94,7 +94,7 @@ footer {
 }
 
 .socialMedia {
-  width: 35px;
+  width: 45px;
   margin-top: 10px;
 }
 
@@ -120,7 +120,7 @@ footer {
   }
   
   header {
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.6);
     width: 300px;
     height: 40px;
     margin-bottom: 30px;
@@ -134,7 +134,7 @@ footer {
   .container {
     max-width: 300px;
     max-height: 460px;
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.6);
     border-radius: 5px;
   }
   
@@ -165,7 +165,7 @@ footer {
   }
   
   footer {
-    background: rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.6);
     width: 300px;
     height: 40px;
     margin-top: 30px;
@@ -177,4 +177,71 @@ footer {
     margin-top: 8px;
   }
   
+}
+
+
+
+/*----------------------------Tablet----------------------------*/
+@media screen and (min-width: 531px) and (max-width: 768px){
+  * {
+    max-width: 768px;
+    max-height: 100%;
+  }
+  
+  header {
+    background: rgba(0, 0, 0, 0.4);
+    width: 450px;
+    height: 45px;
+    margin-bottom: 40px;
+    border-radius: 15px;
+  }
+  
+  h1 {
+    font-size: 30px;
+  }
+  
+  .container {
+    max-width: 450px;
+    max-height: 560px;
+    background: rgba(0, 0, 0, 0.4);
+    border-radius: 15px;
+  }
+  
+  button {
+    margin-bottom: auto;
+    cursor: pointer;
+    border: none;
+    background: none;
+  }
+  
+  #result {
+    text-align: center;
+  }
+  
+  #result img {
+    width: 30%;
+    margin-top: 20px;
+    margin-bottom: 20px;
+  }
+  
+  #startText {
+    font-size: 30px;
+  }
+  
+  #groupButton > button > img {
+    width: 85%;
+  }
+  
+  footer {
+    background: rgba(0, 0, 0, 0.4);
+    width: 450px;
+    height: 45px;
+    margin-top: 40px;
+    border-radius: 15px;
+  }
+  
+  .socialMedia {
+    width: 30px;
+    margin-top: 8px;
+  }
 }
